--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,22 +11,16 @@ server.servlet.context-path=/spms
 
 # Keycloak OAuth2 configuration
 spring.security.oauth2.client.registration.keycloak.client-id=spms-application
-spring.security.oauth2.client.registration.keycloak.client-secret=1hHb0IXMwFd5Iq1vbch2fs0IvhGmJ55E
+spring.security.oauth2.client.registration.keycloak.client-secret=pmKJLOk9O0XnBANq1hNkTTcl3iQ57uem
 spring.security.oauth2.client.registration.keycloak.scope=openid,profile,email
 spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.keycloak.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
 
-
-#spring.security.oauth2.client.provider.keycloak.authorization-uri=http://idp.localhost/realms/spms/protocol/openid-connect/auth
-#spring.security.oauth2.client.provider.keycloak.token-uri=http://idp.localhost/realms/spms/protocol/openid-connect/token
-#spring.security.oauth2.client.provider.keycloak.user-info-uri=http://idp.localhost/realms/spms/protocol/openid-connect/userinfo
-#spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_username
-#spring.security.oauth2.client.provider.keycloak.jwk-set-uri=http://idp.localhost/realms/spms/protocol/openid-connect/certs
-spring.security.oauth2.client.provider.keycloak.authorization-uri=http://111.231.53.25:8090/realms/hkex-poc/protocol/openid-connect/auth
-spring.security.oauth2.client.provider.keycloak.token-uri=http://111.231.53.25:8090/realms/hkex-poc/protocol/openid-connect/token
-spring.security.oauth2.client.provider.keycloak.user-info-uri=http://111.231.53.25:8090/realms/hkex-poc/protocol/openid-connect/userinfo
+spring.security.oauth2.client.provider.keycloak.authorization-uri=http://idp.localhost/realms/spms/protocol/openid-connect/auth
+spring.security.oauth2.client.provider.keycloak.token-uri=http://idp.localhost/realms/spms/protocol/openid-connect/token
+spring.security.oauth2.client.provider.keycloak.user-info-uri=http://idp.localhost/realms/spms/protocol/openid-connect/userinfo
 spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_username
-spring.security.oauth2.client.provider.keycloak.jwk-set-uri=http://111.231.53.25:8090/realms/hkex-poc/protocol/openid-connect/certs
+spring.security.oauth2.client.provider.keycloak.jwk-set-uri=http://idp.localhost/realms/spms/protocol/openid-connect/certs
 
 # Quartz Scheduler Configuration
 spring.quartz.job-store-type=jdbc
