--- a/backend/src/test/resources/application-test.properties
+++ b/backend/src/test/resources/application-test.properties
@@ -42,5 +42,7 @@ spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl
 spring.quartz.properties.org.quartz.jobStore.misfireThreshold=60000
 spring.quartz.properties.org.quartz.threadPool.threadCount=5
 
+logging.level.root=DEBUG
+logging.level.org.springframework.orm.jpa=INFO
 logging.level.org.apache.ibatis=TRACE
 logging.level.org.mybatis.spring=TRACE
