--- a/frontend/src/components/bpmn/configure.json
+++ b/frontend/src/components/bpmn/configure.json
@@ -1,6 +1,6 @@
 {
   "name": "Flowable",
-  "uri": "http://flowable.org/schema/1.0/bpmn",
+  "uri": "http://flowable.org/bpmn",
   "prefix": "flowable",
   "xml": {
     "tagAlias": "lowerCase"
